# sentience-tokenize

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: lex.rs
examples/: basic.rs  dots.rs  pretty.rs  stream.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: tokenize.rs
src/: error.rs  iter.rs  lib.rs  span.rs
tests/: proptest_strings.rs
