[package]
name = "sentience-tokenize"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Tiny Rust zero-dep tokenizer (ident, number, string, parens, operators, keywords)."
repository = "https://github.com/nbursa/sentience-tokenize"
homepage = "https://crates.io/crates/sentience-tokenize"
readme = "README.md"
keywords = ["lexer", "tokenizer", "dsl", "parsing", "rust"]
categories = ["parsing", "text-processing"]
documentation = "https://docs.rs/sentience-tokenize"

include = ["src/**", "README.md", "LICENSE", "examples/**"]

[lib]
name = "sentience_tokenize"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
proptest = "1.5"

[[bench]]
name = "lex"
harness = false
