[package]
name = "sentience-tokenize"
version = "0.2.3"
edition = "2021"
license = "MIT"
description = "Tiny Rust zero-dep tokenizer (ident, number, string, parens, operators, keywords)."
repository = "https://github.com/nbursa/sentience-tokenize"
homepage = "https://crates.io/crates/sentience-tokenize"
readme = "README.md"
keywords = ["lexer", "tokenizer", "dsl", "parsing", "rust"]
categories = ["parsing", "text-processing"]
documentation = "https://docs.rs/sentience-tokenize"
rust-version = "1.81"

include = ["src/**", "README.md", "LICENSE", "examples/**"]

[lib]
name = "sentience_tokenize"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }
proptest = "1.5"
serde_json = "1"

[[bench]]
name = "lex"
harness = false
